---
source: linter/src/rules/adding_not_null_field.rs
expression: "lint_sql(sql, None)"
---
[
    RuleViolation {
        kind: AddingNotNullableField,
        span: Span {
            start: 0,
            len: Some(
                58,
            ),
        },
        messages: [
            Note(
                "Setting a column NOT NULL blocks reads while the table is scanned.",
            ),
            Help(
                "Use a check constraint instead.",
            ),
        ],
    },
]
